0.8
- fixed an error P4A_FIELD::setNewValue that prevented the system from handling 0 as numeric value

0.7
- code cleanup
- added P4A_Navigation_Toolbar, a new default toolbar with "first", "prev", "next", "last", "exit" buttons
- updated TODO
- various bugfixes

0.6
- renamed changelog to CHANGELOG
- added TODO file
- added setlocale(LC_NUMERIC, "C") to avoid php 4.3.10 problems with numeric locales
- added setlocale(LC_MONETARY, "C") to avoid php 4.3.10 problems with numeric locales
- fixed P4A_TOOLBAR, now spacers work correctly
- fixed P4A_IMAGE, now supports the new default icon path
- added spacer.png image into icons
- DATA_SOURCE::getAsCSV() now suports fields names
- renamed DATA_SOURCE::exportToCSV() to DATA_SOURCE::exportAsCSV()
- added DATA_SOURCE::exportToCSV() as an alias of DATA_SOURCE::exportAsCSV()

0.5
- fixed a file upload bug that prevented a correct behaviour when the web server is listening on a port differt from 80
- fixed a bug in DATA_SOURCE filters engine
- added a message to MySQL Manager to suggest using Firefox
- fixed a bug in ARRAY_SOURCE getAll
- fixed a bug in ARRAY_SOURCE load

0.4
- removed pear/pear.php that caused errors on windows installation
- fixed various errors in array_source
- fixed a reference in frame
- various bugfixes

0.3
- changed PEAR repository management, now with web interface we can easily install/upgrade/remove PEAR modules
- added deleteRow to DATA_SOURCE interface
- added deleteRow to ARRAY_SOURCE
- moved some code for deleteRow from DB_SOURCE to DATA_SOURCE, now used also from ARRAY_SOURCE

0.2
- now db_source reload num_rows on setWhere, addFilter, dropFilter
- changed doctype for default template, now we're xhtml 1.1 (not validated, work in progress)
- changes in default template to start the xhtml validation
- fixed getAll in P4A_Array_Source
- fixed page in P4A_DB_Source
- fixed a problem with table and handheld Pocket Internet Explorer 2003