@@ -1,4 +1,8 @@
 0.8
+- fixed deleteRow method on P4A_Data_Source
+- fixed screen.css in default theme
+- fixed anchorCenter bug in P4A_FRAME
+- fixed anchorCenter bug in P4A_FIELDSET
 - fixed an error P4A_FIELD::setNewValue that prevented the system from handling 0 as numeric value
 
 0.7
